Jumbotron overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -469,23 +469,27 @@ h1 {
 .jumbo-services {
   height: 250px;
   background: url("../img/services/services-jumbotron.png") center center no-repeat;
+  margin: 0 auto;
 }
 @media (max-width: 400px) {
   .jumbo-services {
     background: url("../img/services/services-mobile-jumbotron.png") center center no-repeat;
   }
 }
-.jumbo-services h1 {
+.jumbo-services .container {
+  position: relative;
+  height: 100%;
+}
+.jumbo-services .container h1 {
   font-weight: bold;
   font-size: 6.4rem;
   line-height: 75px;
   color: #FFFFFF;
-  padding-top: 157px;
-  top: 157px;
-  margin-left: 8%;
+  position: absolute;
+  bottom: 49px;
 }
 @media (max-width: 400px) {
-  .jumbo-services h1 {
+  .jumbo-services .container h1 {
     font-size: 3.2rem;
     line-height: 41px;
     letter-spacing: 1.4px;
@@ -583,23 +587,27 @@ h1 {
 .jumbo-contact {
   height: 250px;
   background: url("../img/contact/contact-jumbotron.png") center center no-repeat;
+  margin: 0 auto;
 }
 @media (max-width: 400px) {
   .jumbo-contact {
     background: url("../img/contact/contact-mobile-jumbotron.png") center center no-repeat;
   }
 }
-.jumbo-contact h1 {
+.jumbo-contact .container {
+  position: relative;
+  height: 100%;
+}
+.jumbo-contact .container h1 {
   font-weight: bold;
   font-size: 6.4rem;
   line-height: 75px;
   color: #FFFFFF;
-  padding-top: 157px;
-  top: 157px;
-  margin-left: 8%;
+  position: absolute;
+  bottom: 49px;
 }
 @media (max-width: 400px) {
-  .jumbo-contact h1 {
+  .jumbo-contact .container h1 {
     font-size: 3.2rem;
     line-height: 41px;
     letter-spacing: 1.4px;
@@ -607,7 +615,7 @@ h1 {
   }
 }
 @media (max-width: 400px) {
-  .jumbo-contact h1 {
+  .jumbo-contact .container h1 {
     padding-top: 197px;
   }
 }
