--- a/less/contact.less
+++ b/less/contact.less
@@ -4,6 +4,7 @@
   height: 250px;
   background: url("../img/contact/contact-jumbotron.png") center center
     no-repeat;
+  margin: 0 auto;
 
   @media (max-width: 400px) {
     // width: 332px;
@@ -11,17 +12,24 @@
     no-repeat;
   }
 
-  h1 {
-    .jumbo-font;
-    padding-top: 157px;
-    top: 157px;
-    margin-left: 8%;
-    
-    @media (max-width: 400px){
-      padding-top: 197px;
-    }
 
+  .container {
+    position: relative;
+    height: 100%;
+  
+    h1 {
+      .jumbo-font;
+      position: absolute;
+      bottom: 49px;
+      
+      @media (max-width: 400px){
+        padding-top: 197px;
+      }
+  
+    }
   }
+
+  
 }
 
 .contact {
