--- a/less/services.less
+++ b/less/services.less
@@ -4,17 +4,23 @@
   height: 250px;
   background: url("../img/services/services-jumbotron.png") center center
     no-repeat;
+  margin: 0 auto;
 
   @media (max-width: 400px) {
     // width: 332px;
-    background: url("../img/services/services-mobile-jumbotron.png") center center
-    no-repeat;
+    background: url("../img/services/services-mobile-jumbotron.png") center
+      center no-repeat;
   }
-  h1 {
-    .jumbo-font;
-    padding-top: 157px;
-    top: 157px;
-    margin-left: 8%;
+
+  .container {
+    position: relative;
+    height: 100%;
+
+    h1 {
+      .jumbo-font;
+      position: absolute;
+      bottom: 49px;
+    }
   }
 }
 
@@ -93,20 +99,17 @@
   }
 }
 
-
 .tab {
   border: 1px solid black;
 }
 
-.my-card{
+.my-card {
   display: none;
 }
 
 .my-card-selected {
   display: block;
 }
-
-
 
 .tabs-link-selected {
   z-index: 2;
@@ -118,7 +121,6 @@
   }
 }
 
-
-.tab-component{
+.tab-component {
   margin-bottom: 95px;
 }
